# CMPE458

./: Makefile  README.md  correct_input.txt  documentation.txt  incorrect_input.txt  input.txt
my-mini-compiler/: CMakeLists.txt
my-mini-compiler/phase1-w25/src/lexer/: lexer.c
phase1-w25/: Makefile
phase1-w25/include/: tokens.h
phase1-w25/src/lexer/: lexer.c
phase2-w25/documentation/: error_code.md
phase2-w25/include/: parser.h  tokens.h
phase2-w25/src/lexer/: lexer  lexer.c
phase2-w25/src/parser/: parser.c
phase2-w25/test/: input_invalid.txt  input_valid.txt
phase3-w25/: Makefile
phase3-w25-main/documentation/: README.md
phase3-w25-main/include/: semantic.h
phase3-w25-main/src/lexer/: lexer
phase3-w25-main/src/parser/: parser.c
phase3-w25-main/src/semantic/: semantic.c
phase3-w25-main/test/: input_valid.txt
phase3-w25/documentation/: README.md
phase3-w25/include/: lexer.h  parser.h  semantic.h  tokens.h
phase3-w25/src/lexer/: lexer.c
phase3-w25/src/parser/: parser  parser.c
phase3-w25/src/semantic/: semantic.c
phase3-w25/src/test/: input_invalid.txt  input_valid_semantic.txt
